<resources>
    <string name="app_name">Arcádia</string>
    <string name="input_usuario">Usuário</string>
    <string name="input_email_cadastro">Email</string>
    <string name="input_email_login">Email</string>
    <string name="input_senha_cadastro">Senha</string>
    <string name="input_senha_login">Senha</string>
    <string name="btn_cadastro">CADASTRO</string>
    <string name="btn_cadastro_google">Cadastrar com Google</string>
    <string name="btn_login_tela_cadastro">LOGIN</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_login_google">Entrar com Google</string>
    <string name="btn_esqueceu_senha">Esqueceu sua senha?</string>
    <string name="btn_cadastro_tela_login">CADASTRO</string>
    <string name="btn_salvar">SALVAR</string>
    <string name="txt_editar_perfil">Perfil da Empresa</string>
    <string name="txt_nome_de_usuario">Nome da Empresa</string>
    <string name="input_nome_de_usuario_condomino">Fulano de Tal</string>
    <string name="txt_email_condomino">Email</string>
    <string name="input_email_condomino">fulano.tal@gmail.com</string>
    <string name="txt_genero">Gênero</string>
    <string name="input_genero">Masculino</string>
    <string name="txt_data_de_nascimento_condomino">Data de Nascimento</string>
    <string name="input_data_de_nascimento_condomino">11/11/1111</string>
    <string name="txt_alterar_senha">Alterar Senha</string>
    <string name="txt_senha_atual">Senha Atual</string>
    <string name="input_senha">*********</string>
    <string name="txt_nova_senha">Nova Senha</string>
    <string name="txt_confirmar_a_senha">Confirmar a Senha</string>
    <string name="input_email_portaria">condominio.alpha@hotmail.com</string>
    <string name="input_nome_de_usuario_portaria">Alpha</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="termo_de_uso">A sua privacidade é importante para nós. É política do Arcadia respeitar a sua privacidade em relação a qualquer informação sua que possamos coletar no site Arcadia, e outros sites que possuímos e operamos. Solicitamos informações pessoais apenas quando realmente precisamos delas para lhe fornecer um serviço. Fazemo-lo por meios justos e legais, com o seu conhecimento e consentimento. Também informamos por que estamos coletando e como será usado. Apenas retemos as informações coletadas pelo tempo necessário para fornecer o serviço solicitado. Quando armazenamos dados, protegemos dentro de meios comercialmente aceitáveis ​​para evitar perdas e roubos, bem como acesso, divulgação, cópia, uso ou modificação não autorizados. Não compartilhamos informações de identificação pessoal publicamente ou com terceiros, exceto quando exigido por lei. O nosso site pode ter links para sites externos que não são operados por nós. Esteja ciente de que não temos controle sobre o conteúdo e práticas desses sites e não podemos aceitar responsabilidade por suas respectivas políticas de privacidade. Você é livre para recusar a nossa solicitação de informações pessoais, entendendo que talvez não possamos fornecer alguns dos serviços desejados. O uso continuado de nosso site será considerado como aceitação de nossas práticas em torno de privacidade e informações pessoais. Se você tiver alguma dúvida sobre como lidamos com dados do usuário e informações pessoais, entre em contacto connosco. O serviço Google AdSense que usamos para veicular publicidade usa um cookie DoubleClick para veicular anúncios mais relevantes em toda a Web e limitar o número de vezes que um determinado anúncio é exibido para você. Para mais informações sobre o Google AdSense, consulte as FAQs oficiais sobre privacidade do Google AdSense. Utilizamos anúncios para compensar os custos de funcionamento deste site e fornecer financiamento para futuros desenvolvimentos. Os cookies de publicidade comportamental usados ​​por este site foram projetados para garantir que você forneça os anúncios mais relevantes sempre que possível, rastreando anonimamente seus interesses e apresentando coisas semelhantes que possam ser do seu interesse. Vários parceiros anunciam em nosso nome e os cookies de rastreamento de afiliados simplesmente nos permitem ver se nossos clientes acessaram o site através de um dos sites de nossos parceiros, para que possamos creditá-los adequadamente e, quando aplicável, permitir que nossos parceiros afiliados ofereçam qualquer promoção que pode fornecê-lo para fazer uma compra. Compromisso do Usuário O usuário se compromete a fazer uso adequado dos conteúdos e da informação que o Arcadia oferece no site e com caráter enunciativo, mas não limitativo: A) Não se envolver em atividades que sejam ilegais ou contrárias à boa fé a à ordem pública; B) Não difundir propaganda ou conteúdo de natureza racista, xenofóbica, betano ou azar, qualquer tipo de pornografia ilegal, de apologia ao terrorismo ou contra os direitos humanos; C) Não causar danos aos sistemas físicos (hardwares) e lógicos (softwares) do Arcadia, de seus fornecedores ou terceiros, para introduzir ou disseminar vírus informáticos ou quaisquer outros sistemas de hardware ou software que sejam capazes de causar danos anteriormente mencionados. Mais informações Esperemos que esteja esclarecido e, como mencionado anteriormente, se houver algo que você não tem certeza se precisa ou não, geralmente é mais seguro deixar os cookies ativados, caso interaja com um dos recursos que você usa em nosso site. Esta política é efetiva a partir de 7 June 2023 00:07</string>

</resources>