<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.TelaConfiguracaoPortaria">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/campo_foto"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@color/verde_arcadia" />

        <ImageView
            android:id="@+id/seta_esquerda"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="36dp"
            android:onClick="voltarPortaria"
            android:src="@mipmap/icone_seta" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/icon_portaria"
            android:layout_toRightOf="@id/seta_esquerda"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="31dp"/>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/campo_foto"
            android:layout_centerHorizontal="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_editar_perfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/campo_foto"
                    android:layout_marginTop="40dp"
                    android:text="@string/txt_editar_perfil"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/txt_nome_usuario_condomino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_editar_perfil"
                    android:layout_marginTop="8dp"
                    android:text="@string/txt_nome_de_usuario"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/input_nome_condomino"
                    android:layout_width="356dp"
                    android:layout_height="60dp"
                    android:layout_below="@id/txt_nome_usuario_condomino"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="6dp"
                    android:paddingBottom="30dp"
                    android:text="@string/input_nome_de_usuario_portaria" />

                <TextView
                    android:id="@+id/txt_email_condomino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/input_nome_condomino"
                    android:layout_marginTop="8dp"
                    android:text="@string/txt_email_condomino"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/input_email_condomino"
                    android:layout_width="356dp"
                    android:layout_height="60dp"
                    android:layout_below="@id/txt_email_condomino"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="6dp"
                    android:paddingBottom="30dp"
                    android:text="@string/input_email_portaria" />

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>